hphp/test/zend/good/ext/standard/tests/general_functions/getrusage.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists("getrusage")) print "skip";
}
